move overview to overview and font and cursor style to global.css

--- a/overview/overview.html
+++ b/overview/overview.html
@@ -1,5 +1,6 @@
 <html>
     <head>
+        <link rel="stylesheet" href="../global.css">
         <style>
             * {
                 margin: 0;
