--- a/slide13/index.html
+++ b/slide13/index.html
@@ -1,5 +1,6 @@
 <html>
 	<head>
+		<link rel="stylesheet" href="../global.css">
 		<link rel="stylesheet" href="style.css">
 	</head>
 	<body>
@@ -9,7 +10,7 @@
 		  <text fill="#e3f2ff" font-size="30" x="20" y="35" font-family="overwatch">6x Q</text>
 		</svg>
 		-->
-		
+
 		<div id="map">
 		</div>
 		<div id="navBar">
