--- a/overview/overview.html
+++ b/overview/overview.html
@@ -1,5 +1,7 @@
+<!DOCTYPE html>
 <html>
     <head>
+        <meta charset="utf-8"/>
         <link rel="stylesheet" href="../global.css">
         <link rel="stylesheet" href="style.css">
     </head>
@@ -9,13 +11,57 @@
             <div id="crop_a">
                 <div id="view_a" class="view">
                     <div class="heatmap-container"></div>
-                    <h1>Current Performance</h1>
+                    <div class="stats">
+                        <h1>Current Performance</h1>
+                        <div class="stat-box">
+                            <div class="stat-value">37<span class="down"/></div>
+                            <div class="stat-name">ELIMINATIONS</div>
+                        </div>
+                        <div class="stat-box">
+                            <div class="stat-value">27<span class="up"/></div>
+                            <div class="stat-name">OBJECTIVE KILLS</div>
+                        </div>
+                        <div class="stat-box">
+                            <div class="stat-value">8,014<span class="up"/></div>
+                            <div class="stat-name">DAMAGE DONE</div>
+                        </div>
+                        <div class="stat-box">
+                            <div class="stat-value">292<span class="up"/></div>
+                            <div class="stat-name">HEALING DONE</div>
+                        </div>
+                        <div class="stat-box">
+                            <div class="stat-value">9<span class="up"/></div>
+                            <div class="stat-name">DEATHS</div>
+                        </div>
+                    </div>
                 </div>
             </div>
             <div id="crop_b">
                 <div id="view_b" class="view">
                     <div class="heatmap-container"></div>
-                    <h1>Career Average</h1>
+                    <div class="stats">
+                        <h1>Career Average</h1>
+                        <div class="stat-box">
+                            <div class="stat-value">37<span class="down"/></div>
+                            <div class="stat-name">ELIMINATIONS</div>
+                        </div>
+                        <div class="stat-box">
+                            <div class="stat-value">27<span class="up"/></div>
+                            <div class="stat-name">OBJECTIVE KILLS</div>
+                        </div>
+                        <div class="stat-box">
+                            <div class="stat-value">8,014<span class="up"/></div>
+                            <div class="stat-name">DAMAGE DONE</div>
+                        </div>
+                        <div class="stat-box">
+                            <div class="stat-value">292<span class="up"/></div>
+                            <div class="stat-name">HEALING DONE</div>
+                        </div>
+                        <div class="stat-box">
+                            <div class="stat-value">9<span class="up"/></div>
+                            <div class="stat-name">DEATHS</div>
+                        </div>
+                    </div>
                 </div>
             </div>
             <div id="splitter"></div>
