draw circles around ability markers

--- a/slide13/index.html
+++ b/slide13/index.html
@@ -5,8 +5,8 @@
 	<body>
 		<!--
 		<svg width="300" height="200">
-		  <polygon points="0,0 100,0 100,40 50,60 0,40" style="fill:#218ffe;" />
-		  <text fill="#e3f2ff" font-size="30" x="20" y="35" font-family="overwatch">6x Q</text>
+			<polygon points="0,0 100,0 100,40 50,60 0,40" style="fill:#218ffe;" />
+			<text fill="#e3f2ff" font-size="30" x="20" y="35" font-family="overwatch">6x Q</text>
 		</svg>
 		-->
 		
@@ -15,14 +15,14 @@
 		<div id="navBar">
 			<div id="navBarCloseButton">></div>
 			<h1>General</h1>
-			<select name="map">
+			<select id="mapSelect">
 				<option value="hanamura">Hanamura</option>
 				<option value="ilios">Ilios</option>
 			</select>
 			<br />
 			<select id="heroSelect">
 				<option value="mercy">Mercy</option>
-				<option value="soldier76">Soldier 76</option>
+				<option value="soldier">Soldier 76</option>
 			</select>
 
 			<h1>Stats</h1>
