more realistic stats?

--- a/overview/overview.html
+++ b/overview/overview.html
@@ -14,23 +14,31 @@
                     <div class="stats">
                         <h1>Current Performance</h1>
                         <div class="stat-box">
-                            <div class="stat-value">37<span class="down"/></div>
+                            <div class="stat-value green">
+                                42<span class="up" />
+                            </div>
                             <div class="stat-name">ELIMINATIONS</div>
                         </div>
                         <div class="stat-box">
-                            <div class="stat-value">27<span class="up"/></div>
+                            <div class="stat-value">22</div>
                             <div class="stat-name">OBJECTIVE KILLS</div>
                         </div>
                         <div class="stat-box">
-                            <div class="stat-value">8,014<span class="up"/></div>
+                            <div class="stat-value green">
+                                8,014<span class="up"/>
+                            </div>
                             <div class="stat-name">DAMAGE DONE</div>
                         </div>
                         <div class="stat-box">
-                            <div class="stat-value">292<span class="up"/></div>
+                            <div class="stat-value green">
+                                292<span class="up"/>
+                            </div>
                             <div class="stat-name">HEALING DONE</div>
                         </div>
                         <div class="stat-box">
-                            <div class="stat-value">9<span class="up"/></div>
+                            <div class="stat-value green">
+                                7<span class="up"/>
+                            </div>
                             <div class="stat-name">DEATHS</div>
                         </div>
                     </div>
@@ -42,23 +50,27 @@
                     <div class="stats">
                         <h1>Career Average</h1>
                         <div class="stat-box">
-                            <div class="stat-value">37<span class="down"/></div>
+                            <div class="stat-value">37</div>
                             <div class="stat-name">ELIMINATIONS</div>
                         </div>
                         <div class="stat-box">
-                            <div class="stat-value">27<span class="up"/></div>
+                            <div class="stat-value green">
+                                27<span class="up"/>
+                            </div>
                             <div class="stat-name">OBJECTIVE KILLS</div>
                         </div>
                         <div class="stat-box">
-                            <div class="stat-value">8,014<span class="up"/></div>
+                            <div class="stat-value">
+                                5,130
+                            </div>
                             <div class="stat-name">DAMAGE DONE</div>
                         </div>
                         <div class="stat-box">
-                            <div class="stat-value">292<span class="up"/></div>
+                            <div class="stat-value">215</div>
                             <div class="stat-name">HEALING DONE</div>
                         </div>
                         <div class="stat-box">
-                            <div class="stat-value">9<span class="up"/></div>
+                            <div class="stat-value">3</div>
                             <div class="stat-name">DEATHS</div>
                         </div>
                     </div>
@@ -152,7 +164,8 @@
                             "width: 15.63%; height: 27.78%" +
                         "'>" +
                         "<circle cx='100' cy='100' r='" + death.radius  + "' " +
-                        "stroke='#218ffe' stroke-width='4' fill='none' " +
+                        "stroke='#000000' fill='#000000' fill-opacity='0.4' " +
+                        "stroke-width='2' stroke-dasharray='10' " +
                         "stroke-dasharray='10' />" +
                         "<text fill='#e3f2ff' font-size='30' x='91' y='109' " +
                         "font-family='overwatch'>" + death.count + "</text>" +
