add legend to overview

--- a/overview/overview.html
+++ b/overview/overview.html
@@ -77,6 +77,11 @@
                 </div>
             </div>
             <div id="splitter"></div>
+            <div id="legend">
+                <div><span class="color damage"></span>Damage done</div>
+                <div><span class="color healing"></span>Healing done</div>
+                <div><span class="color kills">9</span>Kills</div>
+            </div>
         </div>
 
         <script src="../libs/heatmap.min.js"></script>
