--- a/slide13/index.html
+++ b/slide13/index.html
@@ -45,5 +45,6 @@
 	</body>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 	<script src="../libs/heatmap.min.js"></script>
+	<script src="ow-iid-data-opt.js"></script>
 	<script src="script.js"></script>
 </html>
