--- a/overview/overview.html
+++ b/overview/overview.html
@@ -80,7 +80,7 @@
             <div id="legend">
                 <div><span class="color damage"></span>Damage done</div>
                 <div><span class="color healing"></span>Healing done</div>
-                <div><span class="color kills">9</span>Kills</div>
+                <div><span class="color deaths">9</span>Deaths</div>
             </div>
         </div>
 
