--- a/slide13/index.html
+++ b/slide13/index.html
@@ -27,7 +27,7 @@
 
 			<h1>Stats</h1>
 			<form action="" id="statsSelect">
-				<input type="radio" name="stats" value="eliminations" checked> Eliminations <br />
+				<input type="radio" name="stats" value="eliminations" checked> Deaths <br />
 				<input type="radio" name="stats" value="soloKills"> Healing Done <br />
 				<input type="radio" name="stats" value="damageDone"> Damage Done <br />
 			</form>
