add full statistics screenshot

--- a/slide13/index.html
+++ b/slide13/index.html
@@ -38,7 +38,7 @@
 				<input type="checkbox" value="e"> E - Resurrect<br />
 				<input type="checkbox" value="lshift"> LSHIFT - Guardian Angel<br />
 			</form>
-			<div id="allStatsButton">Show Full Statistics</div>
+			<a href="fullStatistics.html" style="text-decoration: none;"><div id="allStatsButton">Show Full Statistics</div></a>
 		</div>
 		<div id="navBarShowButton"><</div>
 		<div class="heatmap-container"></div>
