--- a/slide13/fullStatistics.html
+++ b/slide13/fullStatistics.html
@@ -2,7 +2,7 @@
 	<head>
 		<link rel="stylesheet" href="../global.css">
 	</head>
-	<body style="background: url('fullStatistics.jpg'); background-repeat: no-repeat; background-size: contain;">
+	<body style="background: url('fullStatistics.jpg'); background-repeat: no-repeat; background-size: contain; margin: 0; width: 100%; height: 100%">
 	</body>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 	<script src="../libs/heatmap.min.js"></script>
